Adding a 1.11 sub module to emrapi